feat(button): add basic option for warning button style
Co-authored-by: cbdistler <cdistler@mycucommunity.com>

--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -64,4 +64,10 @@
   &.xcu-button--tertiary:not([disabled]) {
     background: none;
   }
+
+  &.xcu-button--warning:not([disabled]) {
+    border-color: var(--theme-warning);
+    background-color: var(--theme-warning);
+    color: var(--button-text-on-warning);
+  }
 }
