--- a/projects/navigation/local-nav/src/lib/local-nav.component.html
+++ b/projects/navigation/local-nav/src/lib/local-nav.component.html
@@ -2,17 +2,15 @@
   <a (click)="toggle($event)" href="#">
     Navigation
 
-    <i class="material-icons-outlined">
-      {{ isActive ? 'keyboard_arrow_up' : 'keyboard_arrow_down' }}
-    </i>
+    <i class="material-icons-outlined">keyboard_arrow_down</i>
   </a>
 </div>
 
-<ng-content></ng-content>
+<!-- <ng-content></ng-content> -->
 
 <nav *ngIf="links" class="links" role="navigation" aria-label="Local">
   <ng-container *ngFor="let link of links">
     <a *ngIf="!link.links" [routerLink]="'.'" [fragment]="link.fragment || ''">{{ link.title }}</a>
-    <div *ngIf="link.links" xcu-switcher [link]="link"></div>
+    <div *ngIf="link.links" xcu-switcher [link]="link" class="xcu-switcher"></div>
   </ng-container>
 </nav>
