--- a/projects/navigation/switcher/src/lib/switcher.component.html
+++ b/projects/navigation/switcher/src/lib/switcher.component.html
@@ -1,1 +1,9 @@
-<a [routerLink]="'.'" [fragment]="link.fragment || ''">{{ link.title }}</a>
+<a (click)="toggle($event)" [routerLink]="'.'">
+  {{ link.title }}
+
+  <i *ngIf="shouldShowArrow" class="material-icons-outlined">keyboard_arrow_down</i>
+</a>
+
+<nav role="navigation" [attr.aria-label]="link.title">
+  <a *ngFor="let sublink of link.links" [routerLink]="'.'" [fragment]="sublink.fragment || ''">{{ sublink.title }}</a>
+</nav>
