--- a/projects/form/form-field/src/lib/form-field.component.html
+++ b/projects/form/form-field/src/lib/form-field.component.html
@@ -1,1 +1,5 @@
-<ng-content></ng-content>
+<ng-content #label select="label"></ng-content>
+
+<ng-content #input select="input"></ng-content>
+
+<ng-content #help select="p"></ng-content>
