--- a/projects/form/form-field/src/lib/form-field.component.scss
+++ b/projects/form/form-field/src/lib/form-field.component.scss
@@ -2,59 +2,80 @@
   display: block;
 }
 
-textarea,
-input[type='text'],
-input[type='password'],
-input[type='file'],
-input[type='datetime'],
-input[type='datetime-local'],
-input[type='date'],
-input[type='month'],
-input[type='time'],
-input[type='week'],
-input[type='number'],
-input[type='email'],
-input[type='url'],
-input[type='search'],
-input[type='tel'],
-input[type='color'] {
-  display: inline-block;
-  padding: 1.3rem 1.6rem;
-  margin-bottom: 1.2rem;
-  vertical-align: middle;
-  border-radius: 2px;
-  min-width: 50px;
-  max-width: 635px;
-  width: 100%;
-  min-height: 36px;
-  background-color: #ffffff;
-  border: 1px solid rgba(36, 28, 21, 0.3);
-  transition: all 0.2s ease-in-out 0s;
-  font-size: 1.6rem;
-  line-height: 2rem;
-
-  &:focus {
-    outline: none;
-    border: 1px solid var(--theme-primary);
-    box-shadow: inset 0 0 0 1px var(--theme-primary);
+.xcu-form-field {
+  &.optional label:after {
+    content: 'Optional';
   }
-}
+  &.required label:after {
+    content: 'Required';
+  }
 
-label {
-  --cap-height: 0.828;
-  --font-size: var(--font-size--small);
-  --baseline-multi: 2;
+  textarea,
+  input[type='text'],
+  input[type='password'],
+  input[type='file'],
+  input[type='datetime'],
+  input[type='datetime-local'],
+  input[type='date'],
+  input[type='month'],
+  input[type='time'],
+  input[type='week'],
+  input[type='number'],
+  input[type='email'],
+  input[type='url'],
+  input[type='search'],
+  input[type='tel'],
+  input[type='color'] {
+    display: inline-block;
+    padding: 0.8rem 1.6rem;
+    margin-bottom: 1.2rem;
+    vertical-align: middle;
+    border-radius: 2px;
+    min-width: 50px;
+    max-width: 635px;
+    width: 100%;
+    min-height: 36px;
+    background-color: #ffffff;
+    border: 1px solid rgba(36, 28, 21, 0.3);
+    transition: all 0.2s ease-in-out 0s;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
 
-  color: var(--textcolor);
-  display: block;
-  font-weight: var(--font-weight--bold);
-  margin-bottom: calc(var(--font-line-height) - var(--baseline-offset) - 8px);
-  max-width: var(--paragraph--max-width);
-  user-select: none;
-}
+    &:focus {
+      outline: none;
+      border: 1px solid var(--theme-primary);
+      box-shadow: inset 0 0 0 1px var(--theme-primary);
+    }
 
-p {
-  font-size: 1.2rem;
-  font-style: italic;
-  padding: 0 0 0 1.6rem;
+    &:invalid {
+      outline: none;
+      border: 1px solid var(--theme-warning);
+      box-shadow: inset 0 0 0 1px var(--theme-warning);
+    }
+  }
+
+  label {
+    --cap-height: 0.828;
+    --font-size: var(--font-size--small);
+    --baseline-multi: 2;
+
+    color: var(--textcolor);
+    display: block;
+    font-weight: var(--font-weight--bold);
+    margin-bottom: calc(var(--font-line-height) - var(--baseline-offset) - 4px);
+    max-width: var(--paragraph--max-width);
+    user-select: none;
+
+    &:after {
+      float: right;
+      color: rgba(36, 28, 21, 0.65);
+      font-weight: var(--font-weight--semi-bold);
+    }
+  }
+
+  p {
+    font-size: 1.2rem;
+    font-style: italic;
+    padding: 0 0 0 1.2rem;
+  }
 }
