feat(mega-menu): add Toggle as main link in Mega Menus

--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.html
@@ -1,3 +1,4 @@
-<button type="button">
-  <span>{{ link?.title || 'Solutions' }}</span>
-</button>
+<xcu-nav-toggle [title]="link?.title || 'Solutions'" (toggled)="isActive = $event"></xcu-nav-toggle>
+
+
+<ng-content #links></ng-content>
