feat(toggle): show chevron for Mega Menus

--- a/projects/navigation/toggle/src/lib/toggle.component.html
+++ b/projects/navigation/toggle/src/lib/toggle.component.html
@@ -2,4 +2,6 @@
   {{ title }}
 
   <i *ngIf="shouldShowArrow" class="material-icons-outlined">keyboard_arrow_down</i>
+
+  <span class="menu__chevron" [class.menu__chevron--active]="isActive" aria-hidden="true"></span>
 </button>
