--- a/projects/navigation/switcher/src/lib/switcher.component.html
+++ b/projects/navigation/switcher/src/lib/switcher.component.html
@@ -1,4 +1,4 @@
-<xcu-nav-toggle [title]="link.title" (toggled)="isActive = $event"></xcu-nav-toggle>
+<xcu-nav-toggle [title]="link.title" [isActive]="isActive" (toggled)="isActive = $event"></xcu-nav-toggle>
 
 <nav role="navigation" [attr.aria-label]="link.title">
   <a *ngFor="let sublink of link.links" [routerLink]="'.'" [fragment]="sublink.fragment || ''">{{ sublink.title }}</a>
