--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.html
@@ -1,4 +1,12 @@
-<xcu-nav-toggle [title]="link?.title || 'Solutions'" (toggled)="isActive = $event"></xcu-nav-toggle>
+<xcu-nav-toggle [title]="link?.title" [isActive]="isActive" (toggled)="isActive = $event">
+</xcu-nav-toggle>
 
-
-<ng-content #links></ng-content>
+<div class="mega-menu__container">
+  <div class="mega-menu-shadow--bottom">
+    <div class="mega-menu-shadow--top">
+      <div class="mega-menu__content">
+        <ng-content #links></ng-content>
+      </div>
+    </div>
+  </div>
+</div>
