feat(mega-menu-footer): create new Footer component for Mega Menus

--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.html
@@ -7,6 +7,8 @@
       <div class="mega-menu__content">
         <ng-content #links></ng-content>
       </div>
+
+      <ng-content #footer select="[xcu-mega-menu-footer]"></ng-content>
     </div>
   </div>
 </div>
