--- a/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.html
@@ -1,7 +1,10 @@
-<div class="icon">
-  <ng-content #icon></ng-content>
+<div *ngIf="icons.length" class="icon">
+  <ng-content #icon select="svg"></ng-content>
 </div>
 <div>
-  <div *ngIf="title" class="title">{{ title }}</div>
-  <div *ngIf="description" class="description">{{ description }}</div>
+  <div *ngIf="title" class="title">
+    <span>{{ title }}</span>
+    <span *ngIf="badge" class="badge">{{ badge }}</span>
+  </div>
+  <p *ngIf="description" class="description">{{ description }}</p>
 </div>
