feat(badge): create init badge component

--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
@@ -54,3 +54,21 @@
   position: relative;
   z-index: 20;
 }
+
+@media screen and (max-width: 48em) {
+  :host {
+    &.horizontal {
+      .mega-menu__container {
+        max-width: calc(100% + 1.6rem);
+
+        .mega-menu-shadow--top {
+          flex-direction: column;
+        }
+      }
+    }
+
+    .mega-menu__content {
+      --columns: 1;
+    }
+  }
+}
