--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -28,7 +28,7 @@
   font-size: 1.2rem;
   font-weight: var(--font-weight--bold);
   line-height: 1.6rem;
-  margin-right: 1.2rem;
+  // margin-right: 1.2rem;
   padding: 0.4rem 1.2rem;
 
   &.rounded {
