feat(avatar-stack): add avatar stack as component of Avatar project

--- a/projects/avatar/src/lib/avatar.component.scss
+++ b/projects/avatar/src/lib/avatar.component.scss
@@ -35,3 +35,12 @@ img {
   width: 4rem;
   vertical-align: middle;
 }
+
+// Styles for when an avatar is used in a stack
+:host-context(.xcu-avatar-stack) {
+  margin-left: -4px;
+
+  &:first-child {
+    margin-left: 0;
+  }
+}
