feat(faq): add styling and functions for accordion views to toggle

--- a/projects/faq/src/lib/faq.component.scss
+++ b/projects/faq/src/lib/faq.component.scss
@@ -1,3 +1,14 @@
+:host.accordion {
+  h3 {
+    text-align: center;
+  }
+
+  .questions {
+    margin: 0 auto;
+    max-width: 635px;
+  }
+}
+
 @media screen and (min-width: 841px) {
   :host.two-columns {
     .questions {
