--- a/projects/faq/src/lib/question/question.component.html
+++ b/projects/faq/src/lib/question/question.component.html
@@ -17,7 +17,11 @@
   class="faq-question" [class.faq-question--active]="isExpanded">
   <ng-container *ngTemplateOutlet="question"></ng-container>
 
-  <i class="material-icons-outlined">keyboard_arrow_down</i>
+  <svg fill="currentColor" viewBox="0 0 20 20" height="20" width="20" class="faq-question__arrow">
+    <path fill-rule="evenodd"
+      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+      clip-rule="evenodd"></path>
+  </svg>
 </a>
 
 <div *ngIf="isAccordion" class="faq-answer__container">
