--- a/projects/navigation/toggle/src/lib/toggle.component.html
+++ b/projects/navigation/toggle/src/lib/toggle.component.html
@@ -1,7 +1,11 @@
 <button type="button" (click)="toggle($event)">
   {{ title }}
 
-  <i *ngIf="shouldShowArrow" class="material-icons-outlined">keyboard_arrow_down</i>
+  <svg *ngIf="shouldShowArrow" fill="currentColor" viewBox="0 0 20 20" height="20" width="20" class="menu__arrow">
+    <path fill-rule="evenodd"
+      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+      clip-rule="evenodd"></path>
+  </svg>
 
   <span class="menu__chevron" [class.menu__chevron--active]="isActive" aria-hidden="true"></span>
 </button>
