--- a/projects/navigation/toggle/src/lib/toggle.component.scss
+++ b/projects/navigation/toggle/src/lib/toggle.component.scss
@@ -13,7 +13,7 @@
   }
 }
 
-i.material-icons-outlined {
+.menu__arrow {
   font-size: 16px;
   line-height: 24px;
   margin-left: 4px;
@@ -86,6 +86,10 @@ i.material-icons-outlined {
   @media screen and (max-width: 40em) {
     & > button {
       padding: 16px;
+    }
+
+    .menu__chevron {
+      display: none;
     }
   }
 }
