refactor(button): use background color CSS variable for primary buttons

--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -58,7 +58,7 @@
   }
 
   &.xcu-button--primary:not([disabled]) {
-    background-color: var(--theme-primary);
+    background-color: var(--button__background-color);
     color: var(--button-text--on-dark);
   }
 
