--- a/projects/navigation/page-nav/src/lib/page-nav.component.html
+++ b/projects/navigation/page-nav/src/lib/page-nav.component.html
@@ -7,7 +7,7 @@
     <ul role="navigation" aria-label="Page navigation">
       <ng-container *ngFor="let link of links">
         <li>
-          <a [routerLink]="'.'" [fragment]="link.fragment || ''" class="colorize">{{ link.title }}</a>
+          <a [routerLink]="[{}, link.fragment]" routerLinkActive="active" class="colorize">{{ link.title }}</a>
         </li>
       </ng-container>
     </ul>
