--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.html
@@ -1,5 +1,5 @@
-<xcu-nav-toggle [title]="link?.title" [isActive]="isActive" (toggled)="isActive = $event" [openOnHover]="openOnHover"
-  [shouldShowArrow]="shouldShowArrow">
+<xcu-nav-toggle [title]="link?.title" [href]="link?.fragment" [isActive]="isActive" (toggled)="isActive = $event"
+  [openOnHover]="openOnHover" [shouldShowArrow]="shouldShowArrow">
 </xcu-nav-toggle>
 
 <div (mouseleave)="onHoverOut($event)" (touchend)="onHoverOut($event)" class="mega-menu__container">
