--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
@@ -17,6 +17,8 @@
 
   &.menu--active {
     .mega-menu__container {
+      --menu-transition: .1s;
+      --menu-transition-delay: .1s;
       --menu-rotateX: 0;
 
       opacity: 1;
@@ -36,9 +38,16 @@
 }
 
 .mega-menu__container {
+  --menu-transition: .25s;
+  --menu-transition-delay: .25s;
+  --mega-menu__border-color: #dedddc;
   --menu-rotateX: -15deg;
+ 
+  @media (prefers-color-scheme: dark) {
+    --mega-menu__border-color: #223344;
+  }
 
-  border: 1px solid #dedddc;
+  border: 1px solid var(--mega-menu__border-color);
   display: block;
   margin-left: var(--menu-margin-left, -2.4rem);
   margin-top: 2.4rem;
@@ -49,9 +58,11 @@
   transform: translateX(var(--menu-translateX, 0)) rotateX(var(--menu-rotateX));
   transform-origin: 50% -50px;
   transition: var(--menu-transition, 250ms);
+    transition-delay: var(--menu-transition-delay, 0s);
   transition-property: transform, opacity;
   width: max-content;
   will-change: transform, opacity;
+  z-index: 1;
 
   .mega-menu-shadow--bottom {
     border-radius: 2px;
@@ -77,28 +88,8 @@
   // grid-gap: 3.2rem;
   grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
 
-  background-color: #fff;
+  background-color: var(--theme-background);
   padding: 3.2rem;
   position: relative;
   z-index: 20;
-}
-
-.xcu-mega-menu-footer {
-  background-color: #f9fafb;
-  height: 100%;
-  padding: 2.4rem 3.6rem;
-  width: 100%;
-  z-index: 20;
-}
-
-.title {
-  font-weight: var(--font-weight--bold);
-  color: var(--textcolor);
-}
-
-.description {
-  --font-size: 1.4rem;
-  --baseline-offset: 2px;
-
-  color: var(--textcolor--secondary);
 }
