--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -27,6 +27,10 @@
   vertical-align: middle;
   white-space: nowrap;
 
+  @media (prefers-color-scheme: dark) {
+    --button__background-color: #2D3748;
+  }
+
   &:visited {
     color: var(--button__color);
   }
@@ -80,23 +84,27 @@
   &.xcu-button--raised:not([disabled]) {
     --box-shadow--thin: 8px;
     --button__height: 48px;
-    --deep-teal: #173f35;
 
     --button__background-color: var(--theme-secondary);
-    --button__color: var(--deep-teal);
+    --button__color: var(--color--deep-teal);
     --button__font-size: var(--font-size);
+    --button__box-shadow-color: var(--color--deep-teal);
 
     background: var(--button__background-color);
-    box-shadow: var(--box-shadow--thin) var(--box-shadow--thin) var(--deep-teal);
+    box-shadow: var(--box-shadow--thin) var(--box-shadow--thin) var(--button__box-shadow-color);
     font-size: var(--button__font-size);
     font-weight: var(--font-weight--bold);
 
+    @media (prefers-color-scheme: dark) {
+      --button__background-color: var(--color--silver-tree);
+    }
+
     &:active {
-      box-shadow: 4px 4px var(--deep-teal);
+      box-shadow: 4px 4px var(--button__box-shadow-color);
     }
 
     &:hover {
-      box-shadow: 6px 6px var(--deep-teal);
+      box-shadow: 6px 6px var(--button__box-shadow-color);
     }
   }
 }
