--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -8,7 +8,7 @@
   max-width: 635px;
   width: 100%;
   min-height: 36px;
-  background-color: #ffffff;
+  // background-color: #ffffff;
   border: 1px solid rgba(36, 28, 21, 0.3);
   transition: all 0.2s ease-in-out 0s;
 }
